個人開発演習_登録・変更_バリデーション_メッセージ出力完了（登録のエラーメッセージ位置修正完了）

--- a/spring_crud_exc5_name/src/main/resources/templates/regist/regist_input.html
+++ b/spring_crud_exc5_name/src/main/resources/templates/regist/regist_input.html
@@ -10,11 +10,19 @@
 	
 	<div class="update">
 		<form th:action="@{/regist/check}" method="post" th:object="${employeeForm}">
+			
+	<!-- エラーメッセージの出力(入力チェック) -->
+	<p>
+		<span th:each="error:${#fields.detailedErrors()}"> 
+			<span th:text="${error.message}" class="error"></span><br />
+		</span>
+		<span th:text="${errMessage}" class="error"></span>
+	</p>
+			
 			<div class="form">
 				<div class="label">パスワード：</div>
 				<div class="input required">
 					<input type="password" th:field="*{empPass}" />
-					<span th:errors="*{empPass}"></span>
 				</div>
 			</div>
 			
@@ -22,7 +30,6 @@
 				<div class="label">社員名：</div>
  				<div class="input required">
 					<input type="text" th:field="*{empName}" />
-					<span th:errors="*{empName}"></span>
 				</div>
 			</div>
 			
@@ -38,7 +45,6 @@
 				<div class="label">住所：</div>
 				<div class="input required">
 					<input type="text" th:field="*{address}" />
-					<span th:errors="*{address}"></span>
 				</div>
 			</div>
 			
@@ -46,7 +52,6 @@
 				<div class="label">生年月日：(YYYY/MM/DD)</div>
 				<div class="input required">
 					<input type="text" th:field="*{birthday}" />
-					<span th:errors="*{birthday}"></span>
 				</div>
 			</div>
 
