--- a/spring_crud_exc5_name/src/main/resources/templates/common/header.html
+++ b/spring_crud_exc5_name/src/main/resources/templates/common/header.html
@@ -8,7 +8,11 @@
 	<div class="content">
 		<div class="title">社員管理システム</div>
 		<div th:if="${session.loginUser != null}" class="user_info">
-			ようこそ、<span th:text="${session.loginUser.empName}"></span>さん
+			
+			<!--「ようこそ、〇〇さん」をクリックしたときに、社員変更入力画面が表示されるようにするための記述 -->
+			<a th:href="@{/update/input}">
+				ようこそ、<span th:text="${session.loginUser.empName}"></span>さん
+			</a>
 			<span class="pipeline">|</span><a th:href="@{/logout}">ログアウト</a>
 		</div>
 
